Updated build coverage report to include details from each run.

--- a/webtools/testopia/template/en/default/testopia/caserun/short-form-header.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/caserun/short-form-header.html.tmpl
@@ -26,7 +26,7 @@
         <tr>
       [% IF !caserun.canedit %]
           <td valign="middle" style="cursor:pointer;" onclick="sr([% index %]);">
-            <img src="testopia/img/lk.gif" width="13" height="15" alt="locked" border="0"/>
+            <img src="testopia/img/lk.gif" width="13" height="15" alt="locked" title="Locked: This run is stopped" border="0"/>
           </td>
       [% END %]
 
