Bug 357433: Labels of custom fields are left aligned on enter_bug.cgi and post_bug.cgi Patch by Olav Vitters <olav@bkor.dhs.org> r=mkanat a=myk

--- a/webtools/bugzilla/skins/standard/global.css
+++ b/webtools/bugzilla/skins/standard/global.css
@@ -292,3 +292,12 @@ dl dl > dt {
         background-color: #fff;
     }
 }
+
+.field_label {
+    text-align: right;
+    vertical-align: top;
+    font-weight: bold;
+}
+.field_value {
+    vertical-align: top;
+}
