--- a/webtools/litmus/templates/en/default/sidebar/runtests_sidebar.tmpl
+++ b/webtools/litmus/templates/en/default/sidebar/runtests_sidebar.tmpl
@@ -6,7 +6,9 @@
 
 [% INCLUDE sidebar/widget_testcases.tmpl %]
 
-[% INCLUDE sidebar/widget_options.tmpl %]
+[% INCLUDE sidebar/widget_testing.tmpl %]
+
+[% INCLUDE sidebar/widget_reporting.tmpl %]
 
 [% INCLUDE sidebar/widget_admin.tmpl %]
 
