--- a/webtools/litmus/templates/en/default/sidebar/widget_login.tmpl
+++ b/webtools/litmus/templates/en/default/sidebar/widget_login.tmpl
@@ -1,6 +1,6 @@
   <div class="pagetools">
     <div>
-        <h3>Welcome!</h3>
+        <h3>Welcome</h3>
 [% IF defaultemail %]
     <span class="email">[% defaultemail.getDisplayName.replace('\@.*','') %]</span>
     <p align="right">[% IF ! show_admin %]<a href="edit_users.cgi">Update profile</a><br/>[% END %]<a href="logout.cgi">Log out</a></p>
