--- a/webtools/litmus/css/litmus.css
+++ b/webtools/litmus/css/litmus.css
@@ -944,11 +944,11 @@ table.manage input.button {
     margin: 5px;
 }
 
-select.testcase-subgroups, select.subgroup-testgroups {
+select.testcase-subgroups, select.subgroup-testgroups, select.testgroup-test-runs {
     width: 300px;
 }
 
-select.testcase, select.testcase_id, select.subgroup_id, select.testgroup_id {
+select.testcase, select.testcase_id, select.subgroup_id, select.testgroup_id, select.test_run_id {
     width: 700px;
 }
 
@@ -1137,7 +1137,7 @@ div.section-content {
     padding-right: 10px;
 }
 
-div.testcase-content, div.subgroup-content, div.testgroup-content {
+div.testcase-content, div.subgroup-content, div.testgroup-content, div.test-run-content {
    padding: 0px;
    margin: 5px 10px 0px 10px;
    width: auto;
@@ -1239,17 +1239,23 @@ table.testcase-search th, table.test-runs th {
     border: 0;
 }
 
-table.testcases th, table.testcases td.headerleft {
+
+table.result_container th {
+    vertical-align: middle;
+    font-weight: bold;
+    text-transform: lowercase; 
+    color: #000000;
+    padding: 0px 5px 0px 5px;
+    border: 0;
+}
+
+table.testcases th, table.testcases td.headerleft, table.testday_results td.headerleft, table.testday_results th {
     vertical-align: middle;
     font-weight: bold;
     text-transform: lowercase; 
     color: #666666;
     padding: 0px 5px 0px 5px;
     border: 0;
-}
-
-table.testcases td.headerleft {
-    text-align: left;
 }
 
 table.testcases td {
