--- a/webtools/litmus/templates/en/default/form_widgets/select_platform_id.tmpl
+++ b/webtools/litmus/templates/en/default/form_widgets/select_platform_id.tmpl
@@ -1,9 +1,15 @@
-<select id="[% name %]" name="[% name %]"[% IF size %] size="[% size %]"[% END %][% IF disabled %] disabled[% END %][% IF onChange %] onChange="[% onChange %]"[% END %]>
-    [% IF placeholder %]<option value="">-Platform-</option>[% END %]
-[% IF platforms %]
-[% FOREACH platform=platforms %]
-    <option[% IF defaults.platform==platform.name %] selected[% END %] 
+<select
+  [% IF classname %] class="[% classname %]"[% END %] 
+  id="[% name %]" name="[% name %]"
+  [% IF size %] size="[% size %]"[% END %]
+  [% IF disabled %] disabled[% END %]
+  [% IF onChange %] onChange="[% onChange %]"[% END %]>
+
+  [% IF placeholder %]<option value="">-Platform-</option>[% END %]
+  [% IF platforms %]
+    [% FOREACH platform=platforms %]
+      <option[% IF defaults.platform==platform.name %] selected[% END %] 
         value="[% platform.platform_id | html %]">[% platform.name | html %] ([% platform.platform_id %])</option>
-[% END %]
-[% END %]
+    [% END %]
+  [% END %]
 </select>
