--- a/webtools/litmus/templates/en/default/reporting/test_results.tmpl
+++ b/webtools/litmus/templates/en/default/reporting/test_results.tmpl
@@ -25,7 +25,7 @@
   # ***** END LICENSE BLOCK *****
 #%]
 
-[% staricon="<img class='icon' src='images/star1.gif' title='This result has comments' alt='*'>" %]
+[% commenticon="<img class='icon' src='images/comment.png' title='This result has comments' alt='*'>" %]
 
 [% IF results %]
 <script type="text/javascript" src="js/Comments.js"></script>
@@ -39,7 +39,7 @@
   var comments = new Array();
   [% subscript=0 %]
   [% FOREACH result=results %]
-  comments[[% subscript | js %]] = "[% IF result.comments %][% FOREACH comment=result.comments %][% IF loop.count>1 %]<hr/>[% END %]<p class='comment'><b>[% IF show_admin %]<a href=\"mailto:[% comment.user.email | html | email | uri %]\">[% END %][% comment.user.getDisplayName | html | js | email %][% IF show_admin %]</a>[% END %]<br/>[% comment.submission_time.strftime("%Y-%m-%d&nbsp;%T") %]</b><br/>[% staricon | none %]&nbsp;[% comment.comment | js | html %]<br/></p>[% END %][% END %]";
+  comments[[% subscript | js %]] = "[% IF result.comments %][% FOREACH comment=result.comments %][% IF loop.count>1 %]<hr/>[% END %]<p class='comment'><b>[% IF show_admin %]<a href=\"mailto:[% comment.user.email | html | email | uri %]\">[% END %][% comment.user.getDisplayName | html | js | email %][% IF show_admin %]</a>[% END %]<br/>[% comment.submission_time.strftime("%Y-%m-%d&nbsp;%T") %]</b><br/>[% commenticon | none %]&nbsp;[% comment.comment | js | html %]<br/></p>[% END %][% END %]";
   [% subscript=subscript+1 %]
   [% END %]
 </script>
@@ -67,12 +67,12 @@
   [% FOREACH result=results %]
 <tr class="[% result.result_status_class | html %]">
   <td colspan="2" align="center">[% result.created | html %]</td>
-  <td align="center"><a href="single_result.cgi?id=[% result.testresult_id | html | uri%]">
-    [% result.testresult_id | html %]</a><br/>
+  <td align="center">
+    <a href="single_result.cgi?id=[% result.testresult_id | html | uri%]">[% result.testresult_id | html %]</a><br/>
     [% IF result.comments %]
       <a href="" onclick="return comment(event,[% subscript | js | html %],'');">
-      [% staricon | none%]</a>
-     [% END %]
+      [% commenticon | none%]</a>
+    [% END %]
     </td>
   <td align="left"><a href="show_test.cgi?id=[% result.testcase_id | html | uri %]">
     [% result.testcase_id | html %]</a>: [% result.summary | html %]</td> 
