--- a/webtools/litmus/templates/en/default/sidebar/sidebar.tmpl
+++ b/webtools/litmus/templates/en/default/sidebar/sidebar.tmpl
@@ -4,7 +4,9 @@
 
 [% INCLUDE sidebar/widget_login.tmpl %]
 
-[% INCLUDE sidebar/widget_options.tmpl %]
+[% INCLUDE sidebar/widget_testing.tmpl %]
+
+[% INCLUDE sidebar/widget_reporting.tmpl %]
 
 [% INCLUDE sidebar/widget_admin.tmpl %]
 
