--- a/webtools/litmus/templates/en/default/sidebar/search_sidebar.tmpl
+++ b/webtools/litmus/templates/en/default/sidebar/search_sidebar.tmpl
@@ -4,9 +4,11 @@
 
 [% INCLUDE sidebar/widget_login.tmpl %]
 
-[% INCLUDE sidebar/widget_options.tmpl %]
-
 [% INCLUDE sidebar/widget_search_criteria.tmpl %]
+
+[% INCLUDE sidebar/widget_testing.tmpl %]
+
+[% INCLUDE sidebar/widget_reporting.tmpl %]
 
 [% INCLUDE sidebar/widget_admin.tmpl %]
 
