--- a/webtools/litmus/templates/en/default/reporting/test_results_limit.tmpl
+++ b/webtools/litmus/templates/en/default/reporting/test_results_limit.tmpl
@@ -121,7 +121,7 @@ function checkSearchForm(f)
 Limit to</td>
   <td class="search">
   <input type="text" name="limit" value="[% limit | html %]" size="5" /> results</td>
-  <td align="left" colspan="2"><input name="has_comments" id="has_comments" type="checkbox" value="1"> Result that have comments?</td>
+  <td align="left" colspan="2"><input name="has_comments" id="has_comments" type="checkbox" value="1"> Results that have comments?</td>
   <td class="search-submit" colspan="[% colspan %]">
   <input class="button" type="reset" onclick="FormInit(this.parent, '');" />&nbsp;
   <input class="button" type="submit" value="Show Results" />
